# authr

./: .gitignore  BUILDING_TRAY_APPS.md  Cargo.toml  MIGRATION_PLAN.md  README.md  REBRAND_PLAN.md  UNIFIED_PLAN.md
authr_app/: package.json  pnpm-lock.yaml  vitest.config.ts
authr_app/src/: app.css  app.html
authr_app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
authr_app/src-tauri/capabilities/: default.json
authr_app/src-tauri/icons/: icon.icns
authr_app/src-tauri/src/: lib.rs  main.rs
authr_app/src/lib/: Modal.svelte  backend.ts  dialog.ts  keys.ts
authr_app/src/routes/: +layout.svelte  +page.svelte  codes.test.ts
authr_app/src/routes/settings/: +page.svelte  import.test.ts  settings.test.ts
authr_app/src/routes/settings/add/: +page.svelte  add.test.ts
authr_app/src/routes/settings/backup/: +page.svelte  backup.test.ts
authr_app/src/routes/settings/password/: +page.svelte  password.test.ts
authr_app/src/routes/unlock/: +page.svelte  unlock.test.ts
authr_app/src/test/: app-navigation-stub.ts  backend-mock.ts  setup.ts
authr_cli/: Cargo.toml
authr_cli/src/: commands.rs  gui_interface.rs  main.rs  tui_interface.rs
authr_cli/tests/: integration.rs
authr_core/: Cargo.toml
authr_core/src/: accounts.rs  lib.rs  model.rs  storage.rs  totp.rs  vault.rs
authr_core/tests/: storage.rs
direction-e/: README.md  interactions-and-data.md  screens.md
icon-mockups/: ICON-SPEC.md
memory/: MEMORY.md  tauri-runtime-version-pin.md
