[package]
name = "authr_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "authr"
path = "src/main.rs"

[dependencies]
authr_core = { path = "../authr_core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
rpassword = "7.4.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
