[package]
name = "authr_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "authr"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:eframe", "dep:egui"]

[dependencies]
authr_core = { path = "../authr_core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.4"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
