[package]
name = "authr_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
totp-rs = { version = "5.6", features = ["serde_support"] }
directories = "6.0"
thiserror = "2.0"
# Vault at-rest encryption (UNIFIED_PLAN D5): the pure-Rust `age` passphrase API —
# scrypt KDF + ChaCha20-Poly1305 AEAD in one well-reviewed crate, no hand-rolled
# crypto. Default features only (`default = []`): no CLI/ssh/armor/plugin pulled in.
age = "0.11"

[dev-dependencies]
tempfile = "3"
